[package]
name = "cognite-cache"
version = "0.1.0"
description = "A cache handler for Discord that integrates with ApacheKafka and KeyDB"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
rdkafka = { version = "0.28.0", features = ["dynamic-linking"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version =  "0.11", features = ["json"] }
redis = { version = "0.21.5", features = ["tokio-comp", "aio"] }
dotenv = "0.15.0"
